# ragdoll

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  JUDGING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml
docs/: architecture.md  build-week.md  evaluation.md  evidence-and-dossiers.md  index.md  planning-contract.md  privacy.md  retrieval-and-ranking.md  terminal-experience.md  v1-reference-run.md
docs/assets/OpenAI Build Week/: README.md
docs/assets/OpenAI Build Week/copy/: DEVPOST-SUBMISSION.md  NARRATION.md  SUPPORT-REQUEST.md  UPLOAD-CHECKLIST.md  YOUTUBE-DESCRIPTION.md
docs/assets/OpenAI Build Week/gallery/: CAPTIONS.txt
docs/assets/OpenAI Build Week/video/: ragdoll-build-week-demo.srt
docs/stylesheets/: extra.css
evals/: collect.py  run.py  topics.json
evals/results/: README.md
scripts/: build_build_week_video.py  capture_build_week_demo.py  capture_tui.py  render_brand.py
src/ragdoll/: __init__.py  cli.py  commands.py  config.py  contracts.py  demo.py  domain.py  editor.py  evidence.py  export.py  interactive.py  mascot.py  pdf_worker.py  planning.py  providers.py  ranking.py  safe_io.py  service.py  sources.py  storage.py  synthesis.py  tui.py
tests/: conftest.py  test_config_storage_export.py  test_domain_planning.py  test_evals.py  test_evidence_synthesis.py  test_interactive_cli.py  test_providers_service.py  test_sources_ranking.py
